--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,24 +1,18 @@
 * {
     margin: 0;
     padding: 0;
-    border: 0;
+
 }
 
-.five-day {
-    display: flex;
-    flex-direction: row;
-}
-body {
+
+/* body {
     padding: 0;
     margin: 0;
-}
+} */
 
 header {
     background-color: steelblue;
-    padding: 0;
-    margin: 0;
-}
+    color: white;
+    padding: 3px;
 
-.container-fluid {
-    border: 1px solid red;
 }
